--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ main {
 
 .play-button {
   background-color: rgba(0, 0, 0, 0);
-  border: 5px solid #544a7d; 
+  border: 5px solid #544a7d;
   border-radius: 15px;
   font-size: 5rem;
   text-align: center;
@@ -50,4 +50,69 @@ main {
 
 .circle {
   background-color: red;
+}
+
+.Start-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.name-input {
+  background-color: rgba(0, 0, 0, 0);
+  border: 3px solid black;
+  border-radius: 1rem;
+  height: 2rem;
+  font-size: 1rem;
+  padding-left: 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  width: 160px;
+  flex: 1;
+}
+
+.inputs {
+  display: flex;
+  gap: 20px;
+}
+
+.cell {
+  display: flex;
+  flex-direction: column;
+}
+
+#start-button {
+  width: 160px;
+  height: 2rem;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 1rem;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  border: 3px solid black;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+#start-button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 400px) {
+  .inputs {
+    flex-direction: column;
+  }
+  #game-board {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  }
+  .game-board-container {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+  }
+
 }
